// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and matches snapshot 1`] = `
<View
  refreshing={false}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#eee",
        "elevation": 4,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 12,
        "marginVertical": 8,
        "opacity": 1,
        "padding": 8,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders and matches snapshot when refreshing 1`] = `
<View
  refreshing={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#eee",
        "elevation": 4,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 12,
        "marginVertical": 8,
        "opacity": 0.5,
        "padding": 8,
      },
      undefined,
    ]
  }
/>
`;
